# Audio-LLMs

./: .gitignore  README.md  pyproject.toml
data_module/: audio_processor.py  dataset.py  get_dataset.py
models/: audio_connector.py  multimodel_asr.py
